--- a/03_01_01_knn_classifier.ipynb
+++ b/03_01_01_knn_classifier.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nearest Neighbor\n",
+    "## Nearest Neighbor\n",
     "\n",
     "Similarity - look for the datapoints that are most similar to the observation we are trying to predict"
    ]
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -398,195 +398,20 @@
        "      <td>22</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>197</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>294</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>382</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>102</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>264</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>205</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>110</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>307</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>110</td>\n",
-       "      <td>51</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>397</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>153</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>190</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>192</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>210</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>403</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>164</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>198</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>204</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>253</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>234</td>\n",
-       "      <td>34</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>190</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>182</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>401</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>376</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>102</td>\n",
-       "      <td>42</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    duration  loudness  jazz\n",
-       "0        184        18     1\n",
-       "1        134        34     0\n",
-       "2        243        43     0\n",
-       "3        186        36     0\n",
-       "4        122        22     1\n",
-       "5        197         9     1\n",
-       "6        294        29     0\n",
-       "7        382        22     1\n",
-       "8        102        10     1\n",
-       "9        264        24     0\n",
-       "10       205        20     0\n",
-       "11       110        10     1\n",
-       "12       307        17     1\n",
-       "13       110        51     0\n",
-       "14       397         7     1\n",
-       "15       153        13     1\n",
-       "16       190        19     0\n",
-       "17       192        12     1\n",
-       "18       210        21     1\n",
-       "19       403        22     1\n",
-       "20       164        16     1\n",
-       "21       198        18     1\n",
-       "22       204         4     1\n",
-       "23       253        23     1\n",
-       "24       234        34     0\n",
-       "25       190        19     0\n",
-       "26       182        14     1\n",
-       "27       401        11     1\n",
-       "28       376        37     0\n",
-       "29       102        42     0"
+       "   duration  loudness  jazz\n",
+       "0       184        18     1\n",
+       "1       134        34     0\n",
+       "2       243        43     0\n",
+       "3       186        36     0\n",
+       "4       122        22     1"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +429,7 @@
     "music['jazz'] = [ 1, 0, 0, 0, 1, 1, 0, 1, 1, 0,\n",
     "                  0, 1, 1, 0, 1, 1, 0, 1, 1, 1,\n",
     "                  1, 1, 1, 1, 0, 0, 1, 1, 0, 0]\n",
-    "music"
+    "music.head()"
    ]
   },
   {
@@ -693,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +527,7 @@
        "ModeResult(mode=array([1]), count=array([3]))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
