--- a/03_01_01_knn_classifier.ipynb
+++ b/03_01_01_knn_classifier.ipynb
@@ -451,9 +451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ModeResult(mode=array([1]), count=array([3]))\n"
+     ]
+    }
+   ],
    "source": [
     "#redefine X and Y out of their arrays used in mesh\n",
     "X = music[['loudness','duration']]\n",
@@ -473,31 +481,8 @@
     "        distance.append(np.sqrt(np.sum(np.square(test[i] - X), axis=1))) #distance formula\n",
     "    return distance\n",
     "\n",
-    "#euclidean_distance(test, X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[16    0\n",
-       " 25    0\n",
-       " 0     1\n",
-       " 21    1\n",
-       " 17    1\n",
-       " Name: jazz, dtype: int64]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "#print(euclidean_distance(test, X))\n",
+    "\n",
     "#write function to get k neighbors' votes\n",
     "\n",
     "def neighbors_votes(X, test, k):\n",
@@ -513,26 +498,8 @@
     "            votes.append(music['jazz'].iloc[i])\n",
     "    return(votes)\n",
     "\n",
-    "neighbors_votes(X, test, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ModeResult(mode=array([1]), count=array([3]))"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "#print(neighbors_votes(X, test, 5))\n",
+    "\n",
     "#write function to classify with knn\n",
     "\n",
     "def knn_classifier(X, test, k):\n",
@@ -544,7 +511,7 @@
     "    prediction = scipy.stats.mode(neighbors_votes(X, test, k), axis=None)\n",
     "    return prediction\n",
     "\n",
-    "knn_classifier(X,test,5)"
+    "print(knn_classifier(X,test,5))"
    ]
   },
   {
