--- a/03_01_04_challenge_model_comparison.ipynb
+++ b/03_01_04_challenge_model_comparison.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,22 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#set df to clean and manipulate for regression\n",
+    "#clean first df, leave aggregate numbers and outliers\n",
+    "#this will probably not have very good results\n",
     "df = raw_data[['city',\n",
     "               'population',\n",
     "               'violent_crime',\n",
@@ -110,30 +100,82 @@
     "df['rape_def_2'] = df['rape_def_2'].str.replace(',','').astype(int)\n",
     "df['robbery'] = df['robbery'].str.replace(',','').astype(int)\n",
     "df['aggravated_assault'] = df['aggravated_assault'].str.replace(',','').astype(int)\n",
-    "df['property_crime'] = df['property_crime'].str.replace(',','').astype(int)\n",
-    "\n",
-    "#print(df.dtypes)\n",
-    "#df.head()\n",
-    "df['murder'].min()"
+    "df['property_crime'] = df['property_crime'].str.replace(',','').astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#second df with additional cleaning should yield better results\n",
+    "df2 = df\n",
+    "\n",
+    "#handling outliers outside 2 std devs\n",
+    "#ONLY RUN THIS ONCE OR ELSE IT WILL KEEP ELIMINATING OUTLIERS\n",
+    "#AND EVENTUALLY ERROR\n",
+    "df2['population'] = df2.population.map(\n",
+    "    lambda x: x if x < (df2['population'].median()\n",
+    "                        + (2 * df2['population'].std())) else None)\n",
+    "df2['murder'] = df2.murder.map(\n",
+    "    lambda x: x if x < (df2['murder'].median()\n",
+    "                        + (2 * df2['murder'].std())) else None)\n",
+    "df2['rape_def_2'] = df2.rape_def_2.map(\n",
+    "    lambda x: x if x < (df2['rape_def_2'].median()\n",
+    "                        + (2 * df2['rape_def_2'].std())) else None)\n",
+    "df2['robbery'] = df2.robbery.map(\n",
+    "    lambda x: x if x < (df2['robbery'].median()\n",
+    "                        + (2 * df2['robbery'].std())) else None)\n",
+    "df2['property_crime'] = df2.property_crime.map(\n",
+    "    lambda x: x if x < (df2['property_crime'].median()\n",
+    "                        + (2 * df2['property_crime'].std())) else None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#second df changing crime stat variable values to 0 or 1\n",
-    "#except aggregates violent_crime and property_crime\n",
-    "df2 = df\n",
-    "df2.loc[df2['murder'] > 0, ['murder']] = 1\n",
-    "df2.loc[df2['rape_def_2'] > 0, ['rape_def_2']] = 1\n",
-    "df2.loc[df2['robbery'] > 0, ['robbery']] = 1\n",
-    "df2.loc[df2['aggravated_assault'] > 0, ['aggravated_assault']] = 1\n",
+    "#change crime stat variables to 0 or 1 while dropping nans\n",
+    "df2['murder'] = df2['murder'].dropna().map(lambda x: 1 if x>0 else 0)\n",
+    "df2['rape_def_2'] = df2['rape_def_2'].dropna().map(lambda x: 1 if x>0 else 0)\n",
+    "df2['robbery'] = df2['robbery'].dropna().map(lambda x: 1 if x>0 else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "#not sure why this is necessary here given previous nan handling\n",
+    "#dropna and fillna methods won't work for some reason\n",
     "\n",
-    "#also exclude outliers outside of 3 std devs\n",
-    "#df2 = df2[np.abs(df2.population - df2.population.mean()) <= (3 * df2.population.std())]\n",
-    "#df2"
+    "df2 = df2.dropna(axis=0, subset=['population'])\n",
+    "df2['population'] = df2['population'].astype(int)\n",
+    "df2 = df2.dropna(axis=0, subset=['murder'])\n",
+    "df2['murder'] = df2['murder'].astype(int)\n",
+    "df2 = df2.dropna(axis=0, subset=['rape_def_2'])\n",
+    "df2['rape_def_2'] = df2['rape_def_2'].astype(int)\n",
+    "df2 = df2.dropna(axis=0, subset=['robbery'])\n",
+    "df2['robbery'] = df2['robbery'].astype(int)"
    ]
   },
   {
@@ -145,17 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.46048    0.70524944 0.68100566 0.03460983 0.54812179]\n",
-      "Unweighted Accuracy: 0.49 (+/- 0.49)\n",
-      "[0.55572838 0.68023505 0.64122587 0.03454364 0.34655852]\n",
-      "Unweighted Accuracy: 0.45 (+/- 0.48)\n"
+      "[0.79348795 0.72020588 0.66293921 0.43685177 0.58827965]\n",
+      "Unweighted Accuracy: 0.64 (+/- 0.24)\n",
+      "[0.77144043 0.6729762  0.60792131 0.47524185 0.59311915]\n",
+      "Weighted Accuracy: 0.62 (+/- 0.19)\n"
      ]
     }
    ],
@@ -165,7 +207,7 @@
     "#instantiate and fit knn and weighted knn\n",
     "knn = neighbors.KNeighborsRegressor(n_neighbors=10)\n",
     "knn_w = neighbors.KNeighborsRegressor(n_neighbors=10, weights='distance')\n",
-    "X = pd.DataFrame(df2[['murder','rape_def_2','population_sq']])\n",
+    "X = pd.DataFrame(df2[['murder','rape_def_2','population']])\n",
     "Y = df2[['property_crime']]\n",
     "knn.fit(X,Y)\n",
     "knn_w.fit(X,Y)\n",
@@ -175,9 +217,8 @@
     "T_rape = np.arange(0,1,.01)[:, np.newaxis]\n",
     "T_popsq = np.arange(0,1,.01)[:, np.newaxis]\n",
     "T_concat = np.c_[T_mur,T_rape,T_popsq]\n",
-    "#print(np.shape(T_mur))\n",
-    "#print(np.shape(T_rape))\n",
     "\n",
+    "#predictions\n",
     "Y_ = knn.predict(T_concat)\n",
     "Y_w = knn_w.predict(T_concat)\n",
     "\n",
@@ -187,77 +228,87 @@
     "print(\"Unweighted Accuracy: %0.2f (+/- %0.2f)\" % (score.mean(), score.std() * 2))\n",
     "score_w = cross_val_score(knn_w,X,Y,cv=5)\n",
     "print(score_w)\n",
-    "print(\"Unweighted Accuracy: %0.2f (+/- %0.2f)\" % (score_w.mean(), score_w.std() * 2))"
+    "print(\"Weighted Accuracy: %0.2f (+/- %0.2f)\" % (score_w.mean(), score_w.std() * 2))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## OLS Regression"
+    "## Linear/OLS Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2.00590045e-01 -5.65262233e-01 -3.77319209e-01 -6.09316317e+03\n",
-      "  3.35499989e-01]\n",
-      "OLS Accuracy: -1218.71 (+/- 4874.45)\n"
+      "Coefficients: \n",
+      " [[1.76375222e+02 8.66344749e+01 2.17209498e-02]]\n",
+      "Intercept: \n",
+      " [-55.32817199]\n",
+      "R-squared: \n",
+      " 0.7116312129411614\n",
+      "Cross validation: \n",
+      " [0.79649585 0.73717039 0.69282601 0.50199927 0.68048552]\n"
      ]
     }
    ],
    "source": [
     "#instantiate and fit linear regression\n",
     "regr = linear_model.LinearRegression()\n",
+    "X = pd.DataFrame(df2[['murder','rape_def_2','population']])\n",
+    "Y = df2[['property_crime']]\n",
     "regr.fit(X,Y)\n",
     "\n",
-    "score_ols = cross_val_score(regr,X,Y,cv=5)\n",
-    "print(score_ols)\n",
-    "print(\"OLS Accuracy: %0.2f (+/- %0.2f)\" % (score_ols.mean(), score_ols.std() * 2))"
+    "#inspect results\n",
+    "print('Coefficients: \\n', regr.coef_)\n",
+    "print('Intercept: \\n', regr.intercept_)\n",
+    "print('R-squared: \\n', regr.score(X,Y))\n",
+    "\n",
+    "score_regr = cross_val_score(regr,X,Y,cv=5)\n",
+    "print('Cross validation: \\n', score_regr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept         70.463\n",
-      "murder          1107.813\n",
-      "rape_def_2       388.419\n",
-      "population_sq      0.000\n",
+      "Coefficients:\n",
+      " Intercept    -55.328\n",
+      "murder       176.375\n",
+      "rape_def_2    86.634\n",
+      "population     0.022\n",
       "dtype: float64\n",
-      "Intercept       0.268\n",
-      "murder          0.000\n",
-      "rape_def_2      0.000\n",
-      "population_sq   0.000\n",
+      "\n",
+      "P-values:\n",
+      " Intercept    0.022\n",
+      "murder       0.004\n",
+      "rape_def_2   0.035\n",
+      "population   0.000\n",
       "dtype: float64\n",
-      "0.9861887237802198\n",
-      "                    0        1\n",
-      "Intercept     -54.349  195.275\n",
-      "murder        809.246 1406.380\n",
-      "rape_def_2    179.042  597.796\n",
-      "population_sq   0.000    0.000\n"
+      "\n",
+      "R-squared:\n",
+      " 0.7116312129411613\n"
      ]
     }
    ],
    "source": [
-    "linear_formula = 'property_crime ~ murder+rape_def_2+population_sq'\n",
+    "linear_formula = 'property_crime ~ murder+rape_def_2+population'\n",
     "lm = smf.ols(formula=linear_formula, data=df2).fit()\n",
     "\n",
-    "print(lm.params)\n",
-    "print(lm.pvalues)\n",
-    "print(lm.rsquared)\n",
-    "print(lm.conf_int())"
+    "print('Coefficients:\\n', lm.params)\n",
+    "print('\\nP-values:\\n', lm.pvalues)\n",
+    "print('\\nR-squared:\\n', lm.rsquared)"
    ]
   },
   {
