--- a/03_01_04_challenge_model_comparison.ipynb
+++ b/03_01_04_challenge_model_comparison.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -309,6 +309,19 @@
     "print('Coefficients:\\n', lm.params)\n",
     "print('\\nP-values:\\n', lm.pvalues)\n",
     "print('\\nR-squared:\\n', lm.rsquared)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "While neither model's prediction power is truly impressive, OLS Regression appears to be consistently outperforming KNN Regression, though not by a huge margin. Cross validation scores for OLS are less variable and overall slightly yet measurably and reproduceably higher than those produced by KNN. Additionally, p-values indicate that each variable provides statistically significant insight.\n",
+    "\n",
+    "Various K values from 1-25 were tried, with the most predictive power resulting from k values around 10, and the models getting less and less accurate the further from 10 k was. Both vanilla and weighted KNN models performed very similar to each, regardless of their k value (as long as k was the same for each). In addition to being outperformed by OLS, the fact that both KNN models performed very similarly indicates that this data is not their best application since scaling and weighting variables was not able to produce more accurate (or markedly different) predictions than vanilla KNN.\n",
+    "\n",
+    "In conclusion, OLS is the better suited model for this dataset. If the KNN models performed better or differently, there would be indication that data point proximity offered some explanation of variance, but in this case parameter estimation provided more accurate predictions."
    ]
   },
   {
