--- a/03_01_04_challenge_model_comparison.ipynb
+++ b/03_01_04_challenge_model_comparison.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +176,203 @@
     "df2['rape_def_2'] = df2['rape_def_2'].astype(int)\n",
     "df2 = df2.dropna(axis=0, subset=['robbery'])\n",
     "df2['robbery'] = df2['robbery'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>population</th>\n",
+       "      <th>violent_crime</th>\n",
+       "      <th>murder</th>\n",
+       "      <th>rape_def_2</th>\n",
+       "      <th>robbery</th>\n",
+       "      <th>aggravated_assault</th>\n",
+       "      <th>property_crime</th>\n",
+       "      <th>population_sq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adams Village</td>\n",
+       "      <td>1861</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12.000</td>\n",
+       "      <td>3463321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Addison Town and Village</td>\n",
+       "      <td>2577</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24.000</td>\n",
+       "      <td>6640929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Akron Village</td>\n",
+       "      <td>2846</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16.000</td>\n",
+       "      <td>8099716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albany</td>\n",
+       "      <td>97956</td>\n",
+       "      <td>791</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>526</td>\n",
+       "      <td>4090.000</td>\n",
+       "      <td>9595377936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Albion Village</td>\n",
+       "      <td>6388</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>223.000</td>\n",
+       "      <td>40806544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alfred Village</td>\n",
+       "      <td>4089</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>46.000</td>\n",
+       "      <td>16719921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Allegany Village</td>\n",
+       "      <td>1781</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>3171961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Amherst Town</td>\n",
+       "      <td>118296</td>\n",
+       "      <td>107</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2118.000</td>\n",
+       "      <td>13993943616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Amityville Village</td>\n",
+       "      <td>9519</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>210.000</td>\n",
+       "      <td>90611361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>18182</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>405.000</td>\n",
+       "      <td>330585124</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       city  population  violent_crime  murder  rape_def_2  \\\n",
+       "0             Adams Village        1861              0       0           0   \n",
+       "1  Addison Town and Village        2577              3       0           0   \n",
+       "2             Akron Village        2846              3       0           0   \n",
+       "3                    Albany       97956            791       1           1   \n",
+       "4            Albion Village        6388             23       0           1   \n",
+       "5            Alfred Village        4089              5       0           0   \n",
+       "6          Allegany Village        1781              3       0           0   \n",
+       "7              Amherst Town      118296            107       1           1   \n",
+       "8        Amityville Village        9519              9       0           1   \n",
+       "9                 Amsterdam       18182             30       0           0   \n",
+       "\n",
+       "   robbery  aggravated_assault  property_crime  population_sq  \n",
+       "0        0                   0          12.000        3463321  \n",
+       "1        0                   3          24.000        6640929  \n",
+       "2        0                   3          16.000        8099716  \n",
+       "3        1                 526        4090.000     9595377936  \n",
+       "4        1                  16         223.000       40806544  \n",
+       "5        1                   2          46.000       16719921  \n",
+       "6        0                   3          10.000        3171961  \n",
+       "7        1                  68        2118.000    13993943616  \n",
+       "8        1                   3         210.000       90611361  \n",
+       "9        1                  18         405.000      330585124  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head(10)"
    ]
   },
   {
