--- a/03_02_03_random_forest.ipynb
+++ b/03_02_03_random_forest.ipynb
@@ -23,10 +23,17 @@
     "## Parameters\n",
     "\n",
     "Set parameters for both the tree and the forest\n",
-    "- Trees have same parameters as before: depth, number of features, how the tree is built (entropy, [gini impurity](https://www.garysieling.com/blog/sklearn-gini-vs-entropy-criteria)\n",
+    "- Trees have same parameters as before: depth, number of features, how the tree is built (entropy, [gini impurity](https://www.garysieling.com/blog/sklearn-gini-vs-entropy-criteria))\n",
     "- Get to set the number of estimators (trees) to generate in the forest\n",
     "- Number of trees is a tradeoff between amount of variance explained vs. computational complexity\n",
-    "- Tune by increasing number of trees until the additional learning from another tree approaches zero"
+    "- Tune by increasing number of trees until the additional learning from another tree approaches zero\n",
+    "\n",
+    "__Entropy vs. Gini:__\n",
+    "- Gini intended for continuous attributes, entropy for attributes that occur in classes (eg colors)\n",
+    "- Gini tends to find the largest class, entropy tends to find groups of classes that make up ~50% of the data\n",
+    "- Gini to minimize misclassification, entropy for exploratory analysis\n",
+    "- Gini/entropy methods differ less than 2% of the time\n",
+    "- Entropy can be slower to compute"
    ]
   },
   {
