--- a/03_02_05_random_forest_guided_example.ipynb
+++ b/03_02_05_random_forest_guided_example.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "[5 rows x 237 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,17 +891,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.97867541, 0.97896037, 0.98140584, 0.98188079, 0.97269057,\n",
-       "       0.97710758, 0.96798708, 0.98026503, 0.97990833, 0.98078659])"
+       "array([0.97960153, 0.9801952 , 0.98100259, 0.98195246, 0.9706483 ,\n",
+       "       0.97872239, 0.92101451, 0.98076421, 0.97995583, 0.9801691 ])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,6 +939,308 @@
     "Get rid of as much data as possible without dropping below μ = 90% accuracy. This involves looking into the data to determine which features are most important. Can be raw features or generated dummies, using PCA/correlation matrices are helpful here.\n",
     "\n",
     "Try doing this without using anything related to payment amount or outstanding principal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.94170169, 0.96240887, 0.97428225, 0.97314241, 0.964474  ,\n",
+       "       0.96509143, 0.93854045, 0.96746539, 0.94929584, 0.96169192])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#drop variables related to payments/principle\n",
+    "X_2 = X.drop(['out_prncp',\n",
+    "              'out_prncp_inv',\n",
+    "              'total_pymnt',\n",
+    "              'total_pymnt_inv',\n",
+    "              'last_pymnt_amnt',\n",
+    "              'funded_amnt',\n",
+    "              'funded_amnt_inv',\n",
+    "              'installment',\n",
+    "              'loan_amnt',\n",
+    "              'tot_coll_amt',\n",
+    "              'tot_cur_bal'],1)\n",
+    "X_2 = pd.get_dummies(X_2)\n",
+    "X_2 = X_2.dropna(axis=1)\n",
+    "cross_val_score(rfc,X_2,Y,cv=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.9526727 , 0.97691814, 0.97706063, 0.97608701, 0.97539777,\n",
+       "       0.97577773, 0.97428103, 0.97458976, 0.97252238, 0.97183299])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#drop variables that seem unlikely to predict loan status\n",
+    "#drop issue date\n",
+    "X_3 = X_2.drop(['issue_d_Apr-2015',\n",
+    "                'issue_d_Aug-2015',\n",
+    "                'issue_d_Dec-2015',\n",
+    "                'issue_d_Feb-2015',\n",
+    "                'issue_d_Jan-2015',\n",
+    "                'issue_d_Jul-2015',\n",
+    "                'issue_d_Jun-2015',\n",
+    "                'issue_d_Mar-2015',\n",
+    "                'issue_d_May-2015',\n",
+    "                'issue_d_Nov-2015',\n",
+    "                'issue_d_Oct-2015',\n",
+    "                'issue_d_Sep-2015'],1)\n",
+    "X_3 = pd.get_dummies(X_3)\n",
+    "X_3 = X_3.dropna(axis=1)\n",
+    "cross_val_score(rfc,X_3,Y,cv=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.7346774 , 0.85611835, 0.84697585, 0.84377004, 0.82244123,\n",
+       "       0.61025885, 0.65480064, 0.57142179, 0.56135559, 0.52189712])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#drop payment due dates, credit pull dates\n",
+    "X_4 = X_3.drop(['last_pymnt_d_Apr-2015',\n",
+    "                'last_pymnt_d_Apr-2016',\n",
+    "                'last_pymnt_d_Aug-2015',\n",
+    "                'last_pymnt_d_Aug-2016',\n",
+    "                'last_pymnt_d_Dec-2015',\n",
+    "                'last_pymnt_d_Dec-2016',\n",
+    "                'last_pymnt_d_Feb-2015',\n",
+    "                'last_pymnt_d_Feb-2016',\n",
+    "                'last_pymnt_d_Jan-2015',\n",
+    "                'last_pymnt_d_Jan-2016',\n",
+    "                'last_pymnt_d_Jan-2017',\n",
+    "                'last_pymnt_d_Jul-2015',\n",
+    "                'last_pymnt_d_Jul-2016',\n",
+    "                'last_pymnt_d_Jun-2015',\n",
+    "                'last_pymnt_d_Jun-2016',\n",
+    "                'last_pymnt_d_Mar-2015',\n",
+    "                'last_pymnt_d_Mar-2016',\n",
+    "                'last_pymnt_d_May-2015',\n",
+    "                'last_pymnt_d_May-2016',\n",
+    "                'last_pymnt_d_Nov-2015',\n",
+    "                'last_pymnt_d_Nov-2016',\n",
+    "                'last_pymnt_d_Oct-2015',\n",
+    "                'last_pymnt_d_Oct-2016',\n",
+    "                'last_pymnt_d_Sep-2015',\n",
+    "                'last_pymnt_d_Sep-2016',\n",
+    "                'next_pymnt_d_Feb-2017',\n",
+    "                'next_pymnt_d_Jan-2017',\n",
+    "                'next_pymnt_d_Jul-2016',\n",
+    "                'next_pymnt_d_Mar-2017',\n",
+    "                'last_credit_pull_d_Apr-2015',\n",
+    "                'last_credit_pull_d_Apr-2016',\n",
+    "                'last_credit_pull_d_Aug-2015',\n",
+    "                'last_credit_pull_d_Aug-2016',\n",
+    "                'last_credit_pull_d_Dec-2014',\n",
+    "                'last_credit_pull_d_Dec-2015',\n",
+    "                'last_credit_pull_d_Dec-2016',\n",
+    "                'last_credit_pull_d_Feb-2015',\n",
+    "                'last_credit_pull_d_Feb-2016',\n",
+    "                'last_credit_pull_d_Jan-2015',\n",
+    "                'last_credit_pull_d_Jan-2016',\n",
+    "                'last_credit_pull_d_Jan-2017',\n",
+    "                'last_credit_pull_d_Jul-2015',\n",
+    "                'last_credit_pull_d_Jul-2016',\n",
+    "                'last_credit_pull_d_Jun-2015',\n",
+    "                'last_credit_pull_d_Jun-2016',\n",
+    "                'last_credit_pull_d_Mar-2015',\n",
+    "                'last_credit_pull_d_Mar-2016',\n",
+    "                'last_credit_pull_d_May-2015',\n",
+    "                'last_credit_pull_d_May-2016',\n",
+    "                'last_credit_pull_d_Nov-2015',\n",
+    "                'last_credit_pull_d_Nov-2016',\n",
+    "                'last_credit_pull_d_Oct-2015',\n",
+    "                'last_credit_pull_d_Oct-2016',\n",
+    "                'last_credit_pull_d_Sep-2015',\n",
+    "                'last_credit_pull_d_Sep-2016'],1)\n",
+    "X_4 = pd.get_dummies(X_4)\n",
+    "X_4 = X_4.dropna(axis=1)\n",
+    "cross_val_score(rfc,X_4,Y,cv=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.78544798, 0.85927667, 0.87399967, 0.86713685, 0.86984089,\n",
+       "       0.78408929, 0.71352917, 0.66004892, 0.70617712, 0.60509191])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#too far, try putting credit pulls back in\n",
+    "X_5 = X_3.drop(['last_pymnt_d_Apr-2015',\n",
+    "                'last_pymnt_d_Apr-2016',\n",
+    "                'last_pymnt_d_Aug-2015',\n",
+    "                'last_pymnt_d_Aug-2016',\n",
+    "                'last_pymnt_d_Dec-2015',\n",
+    "                'last_pymnt_d_Dec-2016',\n",
+    "                'last_pymnt_d_Feb-2015',\n",
+    "                'last_pymnt_d_Feb-2016',\n",
+    "                'last_pymnt_d_Jan-2015',\n",
+    "                'last_pymnt_d_Jan-2016',\n",
+    "                'last_pymnt_d_Jan-2017',\n",
+    "                'last_pymnt_d_Jul-2015',\n",
+    "                'last_pymnt_d_Jul-2016',\n",
+    "                'last_pymnt_d_Jun-2015',\n",
+    "                'last_pymnt_d_Jun-2016',\n",
+    "                'last_pymnt_d_Mar-2015',\n",
+    "                'last_pymnt_d_Mar-2016',\n",
+    "                'last_pymnt_d_May-2015',\n",
+    "                'last_pymnt_d_May-2016',\n",
+    "                'last_pymnt_d_Nov-2015',\n",
+    "                'last_pymnt_d_Nov-2016',\n",
+    "                'last_pymnt_d_Oct-2015',\n",
+    "                'last_pymnt_d_Oct-2016',\n",
+    "                'last_pymnt_d_Sep-2015',\n",
+    "                'last_pymnt_d_Sep-2016',\n",
+    "                'next_pymnt_d_Feb-2017',\n",
+    "                'next_pymnt_d_Jan-2017',\n",
+    "                'next_pymnt_d_Jul-2016',\n",
+    "                'next_pymnt_d_Mar-2017',],1)\n",
+    "X_5 = pd.get_dummies(X_5)\n",
+    "X_5 = X_5.dropna(axis=1)\n",
+    "cross_val_score(rfc,X_5,Y,cv=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.95198404, 0.974306  , 0.97668068, 0.97309492, 0.97506531,\n",
+       "       0.97525528, 0.97259493, 0.97209623, 0.97109744, 0.97259298])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#still too far, try a different group of variables\n",
+    "#customer entered title descriptions\n",
+    "X_6 = X_3.drop(['title_Car financing',\n",
+    "                'title_Credit Card/Auto Repair',\n",
+    "                'title_Credit card refinancing',\n",
+    "                'title_Debt consolidation',\n",
+    "                'title_DebtC',\n",
+    "                'title_Green loan',\n",
+    "                'title_Home buying',\n",
+    "                'title_Home improvement',\n",
+    "                'title_Learning and training',\n",
+    "                'title_Major purchase',\n",
+    "                'title_Medical expenses',\n",
+    "                'title_Moving and relocation',\n",
+    "                'title_New Baby and New House (CC Consolidate)',\n",
+    "                'title_Other',\n",
+    "                'title_Pay off Lowes Card',\n",
+    "                'title_Paying off higher interest cards & auto',\n",
+    "                'title_Prescription Drug and Medical Costs',\n",
+    "                'title_SAVE',\n",
+    "                'title_Simple Loan Until Contract Is Completed',\n",
+    "                'title_Student Loan',\n",
+    "                'title_Trying to come back to reality!',\n",
+    "                'title_Vacation',\n",
+    "                'title_considerate',\n",
+    "                'title_new day',\n",
+    "                'title_new kitchen for momma!',\n",
+    "                'title_odymeds',\n",
+    "                'title_Business'],1)\n",
+    "X_6 = pd.get_dummies(X_6)\n",
+    "X_6 = X_6.dropna(axis=1)\n",
+    "cross_val_score(rfc,X_6,Y,cv=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.83310774, 0.88354587, 0.86915533, 0.88093372, 0.89180717,\n",
+       "       0.88627404, 0.87180888, 0.88643758, 0.89445935, 0.88058709])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#drop misc variables\n",
+    "X_7 = X_6.drop(['policy_code',\n",
+    "                'verification_status_Not Verified',\n",
+    "                'verification_status_Source Verified',\n",
+    "                'verification_status_Verified',\n",
+    "                'delinq_2yrs',\n",
+    "                'inq_last_6mths',\n",
+    "                'open_acc',\n",
+    "                'pub_rec',\n",
+    "                'revol_bal',\n",
+    "                'total_acc',\n",
+    "                'total_rec_prncp',\n",
+    "                'total_rec_int',\n",
+    "                'total_rec_late_fee',\n",
+    "                'recoveries',\n",
+    "                'collection_recovery_fee',\n",
+    "                'collections_12_mths_ex_med',\n",
+    "                'next_pymnt_d_Feb-2017',\n",
+    "                'next_pymnt_d_Jan-2017',\n",
+    "                'next_pymnt_d_Jul-2016',\n",
+    "                'next_pymnt_d_Mar-2017'],1)\n",
+    "X_7 = pd.get_dummies(X_7)\n",
+    "X_7 = X_7.dropna(axis=1)\n",
+    "cross_val_score(rfc,X_7,Y,cv=10)"
    ]
   },
   {
