--- a/03_02_06_challenge_random_forest.ipynb
+++ b/03_02_06_challenge_random_forest.ipynb
@@ -399,6 +399,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "Random Forest consistently returns more accurate predictions about 3-5 percentage points higher than a single Decision Tree, but takes over six times longer to run."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
