--- a/03_02_06_challenge_random_forest.ipynb
+++ b/03_02_06_challenge_random_forest.ipynb
@@ -404,15 +404,8 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Random Forest consistently returns more accurate predictions about 3-5 percentage points higher than a single Decision Tree, but takes over six times longer to run."
+    "Random Forest consistently returns more accurate predictions with less variance than a single Decision Tree, but the RF model takes over six times longer to run."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
